Fixed triple-click selection grabbing newline at end, wiki-section focus jumping to start after typing first character

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -141,7 +141,7 @@ li .public-DraftStyleDefault-block {
 }
 
 .editor-top-padding {
-	padding: 5rem 0;
+	padding: 4rem 0;
 	flex-grow: 0;
 }
 .editor-bottom-padding {
